--- a/src/main/resources/assets/jewelcraft/lang/en_us.json
+++ b/src/main/resources/assets/jewelcraft/lang/en_us.json
@@ -57,6 +57,7 @@
   "item.jewelcraft.iron_ring_rose": "Iron Rose Ring",
   "item.jewelcraft.kyan_ring": "Enchanter\u0027s Stone",
   "enchantment.jewelcraft.rainbow": "Fluorite",
+  "desc.jewelcraft.kyanite_xp": "You need more experience levels",
   "item.jewelcraft.golden_amulet_redstone": "Golden Redstone Amulet",
   "item.jewelcraft.golden_amulet_diamond": "Golden Diamond Amulet",
   "item.jewelcraft.copper_amulet_redstone": "Copper Redstone Amulet",
