--- a/src/main/resources/assets/jewelcraft/lang/en_us.json
+++ b/src/main/resources/assets/jewelcraft/lang/en_us.json
@@ -64,6 +64,7 @@
   "item.jewelcraft.bonus_amulet": "Adventurer\u0027s Emerald",
   "enchantment.jewelcraft.kyanite.desc": "Can transfer enchantments to books and increase experience gain from killing",
   "enchantment.jewelcraft.magnetic.desc": "Attracts nearby items to the wearer while crouching",
+  "itemGroup.jewelry": "Jewelcraft",
   "item.jewelcraft.villager_amulet": "Amulet of Peaceful Vibes",
   "item.jewelcraft.iron_amulet_emerald": "Iron Emerald Amulet",
   "item.jewelcraft.copper_amulet_diamond": "Copper Diamond Amulet",
@@ -75,7 +76,6 @@
   "item.jewelcraft.golden_ring_diamond": "Golden Diamond Ring",
   "desc.jewelcraft.gold": "Renders Piglins Neutral",
   "item.jewelcraft.copper_ring_emerald": "Copper Emerald Ring",
-  "itemGroup.jewelcraft_tab": "Jewelcraft",
   "item.jewelcraft.copper_amulet_emerald": "Copper Emerald Amulet",
   "item.jewelcraft.copper_ring_shadow": "Copper Shadow Ring",
   "item.jewelcraft.copper_ring_diamond": "Copper Diamond Ring",
