--- a/src/main/resources/assets/jewelcraft/lang/zh_cn.json
+++ b/src/main/resources/assets/jewelcraft/lang/zh_cn.json
@@ -64,6 +64,7 @@
   "item.jewelcraft.bonus_amulet": "冒险家的绿宝石",
   "enchantment.jewelcraft.kyanite.desc": "可以将魔法转移到书本上并增加杀戮获得的经验",
   "enchantment.jewelcraft.magnetic.desc": "将附近物品吸引至穿戴者",
+  "itemGroup.jewelry": "珠宝工艺",
   "item.jewelcraft.villager_amulet": "和平共鸣护身符",
   "item.jewelcraft.iron_amulet_emerald": "绿宝石铁护符",
   "item.jewelcraft.copper_amulet_diamond": "钻石铜护符",
@@ -75,7 +76,6 @@
   "item.jewelcraft.golden_ring_diamond": "钻石金戒指",
   "desc.jewelcraft.gold": "使猪灵中立",
   "item.jewelcraft.copper_ring_emerald": "绿宝石铜戒指",
-  "itemGroup.jewelcraft_tab": "珠宝工艺",
   "item.jewelcraft.copper_amulet_emerald": "绿宝石铜护符",
   "item.jewelcraft.copper_ring_shadow": "奥术铜戒指",
   "item.jewelcraft.copper_ring_diamond": "钻石铜戒指",
